# aoc

./: .gitmodules  CMakeLists.txt  tools.txt
cache-associativity/: CMakeLists.txt  associativity.cpp  benchmark.py
cache-associativity/slides/: index.html
cache-hierarchy/: CMakeLists.txt  benchmark.py  stream.cpp
false-sharing/: CMakeLists.txt  benchmark.py  false-sharing.cpp
matmul/: CMakeLists.txt  matmul.cpp  mattrans.cpp
net-bandwidth/: CMakeLists.txt  bandwidth.cpp
numactl/: CMakeLists.txt  benchmark.py  notes.txt  run.sh  simple-alloc.cpp  stream.c
numactl/slides/: index.html
register-rename/: CMakeLists.txt  loop.asm  register-rename.cpp
vtune/: CMakeLists.txt  branch-misprediction.cpp  memory-bound.cpp  routing-bench.cpp
